# DeepstreamMCP

./: .gitignore  README.md  client.py  download_docs.py  gemini_chatbot.py  html2txt.py  mcp_server.py  pyproject.toml  requirements.txt  vectorize_docs.py
