[project]
name = "deepstreammcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-generativeai>=0.8.5",
    "mcp>=1.12.1",
    "mcp-cli>=0.5.2",
    "python-dotenv>=1.1.1",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.4",
]
